--- a/level3.html
+++ b/level3.html
@@ -181,7 +181,7 @@
         
         <div class="btn-group">
             <a href="level2.html" class="nav-btn" style="background:#b2bec3; box-shadow: 0 8px 0 #636e72;">⬅ Back</a>
-            <a href="#" class="nav-btn" style="background:#2ecc71; box-shadow: 0 8px 0 #27ae60;">Victory! 🏆</a>
+            <a href="level4.html" class="next-btn">Start Stage 2: Level 4 ➔</a>
         </div>
     </div>
 
