--- a/level3.html
+++ b/level3.html
@@ -181,7 +181,20 @@
         
         <div class="btn-group">
             <a href="level2.html" class="nav-btn" style="background:#b2bec3; box-shadow: 0 8px 0 #636e72;">⬅ Back</a>
-            <a href="level4.html" class="next-btn">Start Stage 2: Level 4 ➔</a>
+            <a href="level4.html" 
+       style="display: inline-block; 
+              background-color: #27ae60; 
+              color: white; 
+              padding: 20px 50px; 
+              text-decoration: none; 
+              font-size: 1.5rem; 
+              font-weight: bold; 
+              border-radius: 60px; 
+              box-shadow: 0 10px 0 #1e8449; 
+              font-family: 'Comic Sans MS', cursive, sans-serif;
+              transition: 0.2s;">
+       Start Stage 2: Level 4 ➔
+    </a>
         </div>
     </div>
 
