--- a/level6.html
+++ b/level6.html
@@ -158,9 +158,21 @@
 
         <p><b>Challenge:</b> Add your favorite food to the list inside the <code>[ ]</code> and press Play!</p>
         
-        <div style="text-align: center;">
-            <a href="level7.html" class="next-btn">Next: Level 7 ➔</a>
-        </div>
+        <div style="text-align: center; margin-top: 40px; margin-bottom: 40px;">
+    <a href="level7.html" 
+       style="display: inline-block; 
+              background-color: #2980b9; 
+              color: white; 
+              padding: 20px 50px; 
+              text-decoration: none; 
+              font-size: 1.5rem; 
+              font-weight: bold; 
+              border-radius: 60px; 
+              box-shadow: 0 10px 0 #1c5982; 
+              font-family: 'Comic Sans MS', cursive, sans-serif;">
+       Enter Stage 2: Level 7 ➔
+    </a>
+</div>
     </div>
 
     <script>
