--- a/level3.html
+++ b/level3.html
@@ -179,9 +179,8 @@
 
         <p><b>Challenge:</b> In the code, try to find the <code>total</code> and change the numbers to see the answer change!</p>
         
-        <div class="btn-group">
-            <a href="level2.html" class="nav-btn" style="background:#b2bec3; box-shadow: 0 8px 0 #636e72;">⬅ Back</a>
-            <a href="level4.html" 
+       <div style="text-align: center; margin-top: 40px; margin-bottom: 40px;">
+    <a href="level4.html" 
        style="display: inline-block; 
               background-color: #27ae60; 
               color: white; 
@@ -195,7 +194,7 @@
               transition: 0.2s;">
        Start Stage 2: Level 4 ➔
     </a>
-        </div>
+</div>
     </div>
 
     <script>
