--- a/level3.html
+++ b/level3.html
@@ -174,7 +174,7 @@
            <code>5 + 5</code> (Add), <code>10 - 2</code> (Subtract), <code>4 * 2</code> (Multiply).</p>
         
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/49d1c3411636?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/8bd64334a6b8" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <p><b>Challenge:</b> In the code, try to find the <code>total</code> and change the numbers to see the answer change!</p>
