--- a/level5.html
+++ b/level5.html
@@ -153,7 +153,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/c93435c3d5ca?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/e70778ccdeed" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <p><b>Challenge:</b> In the code, change the number inside <code>range(5)</code> to <b>100</b> and watch the computer go crazy!</p>
