--- a/level10.html
+++ b/level10.html
@@ -80,7 +80,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/9421aae97164?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/b9b01452ffa8" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <div style="text-align: center;">
