--- a/level11.html
+++ b/level11.html
@@ -79,7 +79,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/768ed55f6fb4?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/26faf6dac444" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <div style="text-align: center;">
