--- a/level12.html
+++ b/level12.html
@@ -81,7 +81,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/86efd76c8687?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/1fa1305e2024" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <div style="text-align: center;">
