--- a/level2.html
+++ b/level2.html
@@ -173,7 +173,7 @@
            <code>score = 10</code> (The name is 'score' and the value is '10').</p>
         
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/60797ff49ed7?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/7f0adcf8236a" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <p><b>Challenge:</b> Look at the code. Can you change the <code>health</code> variable to 100?</p>
