--- a/level4.html
+++ b/level4.html
@@ -151,7 +151,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/d374e7cd055d?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/ce64e2f9e89e" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <p><b>Challenge:</b> Change the password variable to "magic" to see the secret message!</p>
