--- a/level6.html
+++ b/level6.html
@@ -153,7 +153,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/d1f124e1d4cc?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/fb43f91c6e1a" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <p><b>Challenge:</b> Add your favorite food to the list inside the <code>[ ]</code> and press Play!</p>
