--- a/level7.html
+++ b/level7.html
@@ -86,7 +86,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/ec8d9f05b38d?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/163dc6163c0a" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <div style="text-align: center;">
