--- a/level8.html
+++ b/level8.html
@@ -79,7 +79,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/66a07de69010?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/fcdb66914d13" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <div style="text-align: center;">
