--- a/level9.html
+++ b/level9.html
@@ -79,7 +79,7 @@
         
 
         <div class="editor-box">
-            <iframe src="https://trinket.io/embed/python3/bc31439b58bf?runMode=console" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+            <iframe src="https://trinket.io/embed/python/4318e009a318" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
         </div>
 
         <div style="text-align: center;">
